# codius-cli

./: .bumpversion.cfg  .cz.toml  .gitignore  .pre-commit-config.yaml  .release-please-config.json  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  DUMMY_CHANGELOG.md  MANIFEST.in  Makefile  Pipfile  README.md  env.make.sample  pyproject.toml  release-please-config.json  setup.py
.github/actions/unittests/: action.yml
.github/workflows/: branch-workflow.yml  develop.yml  feature.yml  master.yml  publish.yml  release-please.yml  release.yml  run-unittests.yml
scripts/: bump_version.py  sync_setup.py  sync_version.py
src/: di.py  main.py  utils.py
src/codius/: __version__.py  di.py  main.py  utils.py
src/codius/graph/: graph_state.py
src/codius/templates/: aggregate_method.cs.j2
src/codius/ui/: approval_ui.py  assistant.py  sessions_ui.py  shell.py  slash_commands.py
src/domain/model/: history.py  message.py  session.py  state.py
src/domain/service/: config_service.py  session_factory.py  session_service.py
src/domain/services/: config_service.py  session_factory.py  session_service.py
src/graph/: graph.py  graph_state.py
src/graph/nodes/: abort.py  apply_changes.py  distill_intent.py  enforce_conventions.py  enrich_intents.py  extract_building_blocks.py  extract_domain_model.py  extract_project_metadata.py  extract_relevant_sources.py  generate_code.py  generate_domain_vision.py  integrate_changes.py  (+5 more)
src/templates/: aggregate_root.cs  aggregate_root.cs.j2
src/ui/: sessions_ui.py  shell.py  slash_commands.py
tests/: conftest.py  utils.py
(+213 files in other folders)
