[project]
name = "codius"
version = "0.1.5"
description = "A coding assistant for domain-driven design projects in ASP.NET Core."
authors = [
    {name = "David Runemalm", email = "david.runemalm@gmail.com"}
]
license = {text = "GPLv3"}
readme = "README.md"
requires-python = ">=3.9,!=3.13.*"
keywords = ["ddd", "codegen", "aspnetcore", "cli", "assistant"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

dependencies = [
    "exceptiongroup",
    "jinja2",
    "langgraph",
    "langchain",
    "langchain-openai",
    "py-dependency-injection>=1.0.0b3",
    "python-dateutil",
    "python-dotenv",
    "pyyaml",
    "prompt-toolkit",
    "rich",
    "tree-sitter==0.23.2",
    "tree-sitter-c-sharp",
    "typing-extensions"
]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "*"
build = "*"
flake8 = "*"
pre-commit = "*"
pytest = "*"
setuptools = "*"
wheel = "*"

[project.scripts]
codius = "codius.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
